Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntegerNumObjField.quorum
class Main
    Number n
    integer int = 0
    action Main
        n:SetValue(7.5)
        int = cast(integer, n)
    end
end